[project]
name = "blog-dio"
version = "0.1.0"
description = ""
authors = [
    {name = "Felippe Menezes",email = "felippemenezes1982@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "unicorn[standard] (>=2.1.4,<3.0.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "databases[sqlite] (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
